<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">v2ex</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="comment">评论如下</string>
    <string name="herTopic">他的主题如下</string>
    
    <string-array name="mainactivity_list">
        <item >最新主题</item>
        <item>最热主题</item>
        <item>所有节点</item>
        <item>收藏节点</item>
    </string-array>
    
    <string name="setting">设置</string>
    
    <string name="posititve">确定</string>
    <string name="negative">取消</string>
    <string name="tips">提示</string>
    <string name="removenode">确定要删除该节点</string>
    <string name="removeerror">删除节点失败</string>
    <string name="notCollectNode">没有收藏的节点</string>
    
    <string name="updateagain">再试一次</string>
    
    <string name="loginlogo">v2ex</string>
    <string name="username">用户名:</string>
    <string name="password">密    码:</string>
    <string name="login">登陆</string>
    <string name="userlogin">用户账户</string>
    <string name="updateuserinfo">更新用户数据</string>
    <string name="more">更多</string>
    <string name="aboutv2ex">About V2EX</string>
    <string name="aboutinfo">V2EX 是创意工作者们的社区。这里目前汇聚了超过 110,000 名主要来自互联网行业
        	、游戏行业和媒体行业的创意工作者。V2EX 希望能够成为创意工作者们的生活和事业的一部分。</string>
    <string name="author">作者</string>
    <string name="authorname">jack</string>
 
    <string name="usernull">用户名不能为空</string>
    <string name="passnull">密码不能为空</string>
    <string name="updateing">更新中。。。</string>
    <string name="logining">登录中。。。</string>
    <string name="loginerror">登录失败</string>
    <string name="comment">评论</string>
    <string name="repley">回复</string>
    <string name="writerepley">写下你的评论</string>
    <string name="repleysuccess">评论成功</string>
    <string name="repleynull">评论内容不能为空</string>
    <string name="repleyfail">评论失败</string>
    <string name="repleying">评论中。。。</string>
    <string name="writetopic">写些主题吧</string>
    <string name="writecontent">写些主题内容吧</string>
    <string name="adding">发布中</string>
    <string name="adderror">发布失败</string>
    <string name="addsuccess">发布成功</string>
    <string name="addnode">输入要发布的节点</string>
    <string name="topicnull">主题不能为空</string>
    <string name="nodenull">节点不能为空</string>
    
    <string name="key_tracking_mode">key_tracking_mode</string>
    <string name="DrawerOpen">Drawer open</string>
    <string name="DrawerClose">Drawer close</string>
</resources>
