<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<EditText
	    android:id="@+id/topictitle"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
		android:layout_alignParentTop="true"
		android:background="@null"	    
	    android:hint="@string/writetopic"/>
    
	<TextView
	    android:id="@+id/topicdriver"
	    android:layout_width="match_parent"
	    android:layout_height="0.5dp"
	    android:layout_below="@+id/topictitle"
	    android:background="@color/driver"/>
	
	<AutoCompleteTextView 
	    android:id="@+id/autotext"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:background="@null"
	    android:completionThreshold="1"
	    android:layout_below="@+id/topicdriver"
	    android:hint="@string/addnode"/>
	
	
	<TextView
	    android:id="@+id/topicdriver2"
	    android:layout_width="match_parent"
	    android:layout_height="0.5dp"
	    android:layout_below="@+id/autotext"
	    android:background="@color/driver"/>
	
    <EditText
        android:id="@+id/topicontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topicdriver2"
        android:paddingTop="10dp"
        android:gravity="top"
        android:background="@null"
        android:hint="@string/writecontent"/>
	
	
</RelativeLayout>
